# yaml-textfiles-01

./: .gitignore  CMakeLists.txt  README.md
lib/googletest/: README.md
lib/yaml-cpp/: README.md
src/: CMakeLists.txt  Person.cpp  Person.h  main.cpp
text_files/: test.yaml
tst/: CMakeLists.txt  YamlTest.cpp  main.cpp
